# Montscan

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/services/: DocumentProcessor.py  ProcessingManager.py  ScannerHandler.py
