[project]
name = "montscan"
version = "0.1.0"
description = "Automated scanner document processor with OCR, AI naming, and Nextcloud upload"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyftpdlib>=1.5.10",
    "pytesseract>=0.3.13",
    "pillow>=10.0.0",
    "pypdf2>=3.0.0",
    "pdf2image>=1.17.0",
    "requests>=2.31.0",
    "ollama>=0.3.0",
    "colorama>=0.4.6"
]
